# LLMP

./: .env  .gitignore  Dockerfile  LLM_Platform.drawio  README.md  analysis.ipynb  api calls.txt  app.py  example_usage.ipynb  pyproject.toml  test.ipynb
calls/: api calls.txt
llmp/: main.py
llmp/utils/: llmp_utils.py
notebooks/: test_01.ipynb  test_02.ipynb
src/: model_operator.py
src/model_operator/: model_operator.py
src/utils/: llmp_utils.py
