[tool.poetry]
name = "llmp"
version = "0.1.0"
description = "Local LLM Platform API"
authors = ["Mykola Shumskiy <mykola_shumskiy@outlook.pt>"]
packages = [{ include = "llmp" }]

[tool.poetry.dependencies]
pandas = "^2.2.3"
numpy = "^2.2.2"
requests = "^2.32.3"
ipykernel = "^6.29.5"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"

[tool.poetry.scripts]
llmp-api = "llmp.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
